# Fractalism

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  RayMarching.md  vcpkg.json
Fractalism/: App.cpp  App.hpp  CLIncludeHelper.hpp  CLSolver.cpp  CLSolver.hpp  CLTypes.hpp  CLUtils.cpp  CLUtils.hpp  CMakeLists.txt  Events.cpp  Events.hpp  Exceptions.cpp  Exceptions.hpp  FractalismApp.cpp  FractalismApp.hpp  GLRenderCanvas.cpp  GLRenderCanvas.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTexture3D.cpp  GLTexture3D.hpp  GLUtils.hpp  GPUContext.cpp  GPUContext.hpp  MainUIFrame.cpp  MainUIFrame.hpp  NumberInput.cpp  NumberInput.hpp  Options.hpp  Proxy.hpp  RenderPanel.cpp  RenderPanel.hpp  Settings.cpp  Settings.hpp  SharedState.cpp  SharedState.hpp  (+7 more)
Fractalism/GPU/: CMakeLists.txt  GPU.cpp  GPU.hpp  GPUContext.cpp  GPUContext.hpp  Types.cpp  Types.hpp
Fractalism/GPU/OpenCL/: CLCommon.hpp  CLIncludeHelper.hpp  CLSolver.cpp  CLSolver.hpp  CLTypes.cpp  CLTypes.hpp  CLUtils.cpp  CLUtils.hpp  CMakeLists.txt  KernelExecutor.cpp  KernelExecutor.hpp  ProgramManager.cpp  ProgramManager.hpp  SVMPtr.hpp
Fractalism/GPU/OpenGL/: ArcballCamera.cpp  ArcballCamera.hpp  CMakeLists.txt  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTexture3D.cpp  GLTexture3D.hpp  GLUniform.hpp  GLUtils.hpp
Fractalism/KernelHeaders/: cltypes.h  interop.h  kernels.h  number_systems.h  real.h  spectral_color.h
Fractalism/Kernels/: cltypes.h  kernels.h  number_systems.h  spectral_color.h
Fractalism/Shaders/: 2d.frag  2d.vert  3d.frag  3d.vert
Fractalism/UI/: CMakeLists.txt  GLRenderCanvas.cpp  GLRenderCanvas.hpp  IDs.hpp  MenuBar.cpp  MenuBar.hpp  NumberInput.cpp  NumberInput.hpp  RenderPanel.cpp  RenderPanel.hpp  UI.cpp  UI.hpp  UICommon.hpp  ViewMappingSelector.cpp  ViewMappingSelector.hpp  ViewWindow.cpp  ViewWindow.hpp  WxIncludeHelper.hpp
Fractalism/UI/Controls/: CMakeLists.txt  HypercomplexNumberControl.cpp  HypercomplexNumberControl.hpp  IterationToolBar.cpp  IterationToolBar.hpp  NumberSystemToolBar.cpp  NumberSystemToolBar.hpp  ParameterToolBar.cpp  ParameterToolBar.hpp  RenderSettingsToolBar.cpp  RenderSettingsToolBar.hpp  ViewMappingControl.cpp  ViewMappingControl.hpp  ViewspaceToolBar.cpp  ViewspaceToolBar.hpp  ZoomControl.cpp  ZoomControl.hpp
